[gd_scene load_steps=5 format=2]

[ext_resource path="res://Card.gd" type="Script" id=1]
[ext_resource path="res://Shaders/card.shader" type="Shader" id=2]
[ext_resource path="res://Class Cards/16 Triangles/singles/447.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/card_uv = Vector2( 1, 0.5 )
shader_param/color_light = Color( 1, 1, 1, 1 )
shader_param/color_dark = Color( 0, 0, 0, 1 )

[node name="Card" type="TextureRect"]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 2
size_flags_horizontal = 3
texture = ExtResource( 3 )
stretch_mode = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Card_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Card_mouse_exited"]
